# hot-swapping-state-machines2

./: CHANGELOG.md  INSTALL.md  README.md  SEEALSO.md  TODO.md  arrow-loop-state-machines.cabal  hot-swapping-state-machines2.cabal  shell.nix
.github/workflows/: main.yaml
src/: Classes.hs  Codec.hs  Deployment.hs  Erase.hs  FileSource.hs  Interpreter.hs  LibMain.hs  Message.hs  Pipeline.hs  Queue.hs  Stream.hs  TCP.hs  TypeChecker.hs  Upgrade.hs  Utils.hs
src/Example/: Counter.hs
src/Syntax/: Typed.hs  Types.hs  Untyped.hs
src/Syntax/Pipeline/: Typed.hs  Untyped.hs
src/Syntax/StateMachine/: Typed.hs  Untyped.hs
src/TypeCheck/: Pipeline.hs  StateMachine.hs
