cabal-version:   3.0
name:            arrow-loop-state-machines
version:         0.0.0

-- synopsis:
-- description:
license:         BSD-2-Clause
license-file:    LICENSE
author:          Stevan A
maintainer:      stevana@users.noreply.github.com

-- copyright:
category:        Concurrency
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
    Classes
    Codec
    Deployment
    Example.Counter
    Interpreter
    LibMain
    Message
    Queue
    Stream
    Syntax.Pipeline.Typed
    Syntax.Pipeline.Untyped
    Syntax.StateMachine.Typed
    Syntax.StateMachine.Untyped
    Syntax.Types
    TCP
    TypeCheck.Pipeline
    TypeCheck.StateMachine
    Utils

  build-depends:
    , base        >=4.17.0.0
    , bytestring
    , ghc-prim
    , mtl
    , network
    , stm

  hs-source-dirs:   src
  default-language: Haskell2010

executable exe
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , arrow-loop-state-machines
    , base

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite test
  import:           warnings
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , arrow-loop-state-machines
    , base
